--- a/templates/app/app.ejs
+++ b/templates/app/app.ejs
@@ -59,4 +59,4 @@ if (!module.parent) {
 		console.log('Server running on port '+config.port || 3000)
 	})
 } else
-	module.exports=app;
+	module.exports=app
