--- a/templates/app/views/ejs/layouts/main.ejs
+++ b/templates/app/views/ejs/layouts/main.ejs
@@ -14,7 +14,7 @@
         <![endif]-->
     </head>
     <body>
-        <header class="navbar navbar-default navbar-fixed-top" role="banner">
+        <header class="navbar navbar-default navbar-top" role="banner">
             <div class="container">
                 <div class="navbar-header">
                     <button class="navbar-toggle" type="button" data-toggle="collapse" data-target=".tr-navbar-collapse">
@@ -61,41 +61,6 @@
                 </nav>
             </div>
         </header>
-        <%% if(program.auth){ -%%>
-        <% if(!isAuthenticated){ -%>
-        <div id="loginModal" class="modal fade" tabindex="-1" role="dialog" aria-hidden="true">
-          <div class="modal-dialog">
-              <div class="modal-content">
-                  <div class="modal-header">
-                      <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-                      <h3 class="text-center">Login</h3>
-                  </div>
-                  <div class="modal-body">
-                      <form class="form col-md-12 center-block" action="/login" id="modalLoginForm" method="post">
-                        <div class="input-group">
-                            <span class="input-group-addon"><i class="fa fa-at-sign fa-2x"></i></span>
-                            <input type="text" class="form-control input-lg" placeholder="Email" name="email">
-                        </div>
-                        <div class="input-group">
-                            <span class="input-group-addon"><i class="fa fa-asterisk fa-2x"></i></span>
-                            <input type="password" class="form-control input-lg" placeholder="Password" name="password">
-                        </div>
-                          <div class="form-group">
-                                <a class="btn btn-lg col-md-5 col-sm-6 col-md-offset-1 col-sm-6" href="/register">
-                                    <i class="fa fa-users"></i> Register
-                                </a>
-                                <button type="submit" class="btn btn-primary btn-lg col-md-5 col-md-offset-1 col-sm-6">
-                                    <i class="fa fa-sign-in"></i> Sign In
-                                </button>
-                          </div>
-                      </form>
-                      <div style="clear: both"></div>
-                  </div>
-              </div>
-          </div>
-        </div>
-        <% } -%>
-        <%% } -%%>
         <%% if(program.session){ -%%>
         <div class='container'>
             <div class='messages row'>
@@ -124,6 +89,42 @@
         <div id="wrapper">
             <%- body %>
         </div>
+        <%% if(program.auth){ -%%>
+        <!-- login modal -->
+        <% if(!isAuthenticated){ -%>
+        <div id="loginModal" class="modal fade" tabindex="-1" role="dialog" aria-hidden="true">
+          <div class="modal-dialog">
+              <div class="modal-content">
+                  <div class="modal-header">
+                      <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+                      <h3 class="text-center">Login</h3>
+                  </div>
+                  <div class="modal-body">
+                      <form class="form col-md-12 center-block" action="/login" id="modalLoginForm" method="post">
+                        <div class="input-group">
+                            <span class="input-group-addon"><i class="fa fa-at-sign fa-2x"></i></span>
+                            <input type="email" class="form-control input-lg" placeholder="Email" name="email" required>
+                        </div>
+                        <div class="input-group">
+                            <span class="input-group-addon"><i class="fa fa-asterisk fa-2x"></i></span>
+                            <input type="password" class="form-control input-lg" placeholder="Password" name="password" required>
+                        </div>
+                          <div class="form-group">
+                                <a class="btn btn-lg col-md-5 col-sm-6 col-md-offset-1 col-sm-6" href="/register">
+                                    <i class="fa fa-users"></i> Register
+                                </a>
+                                <button type="submit" class="btn btn-primary btn-lg col-md-5 col-md-offset-1 col-sm-6">
+                                    <i class="fa fa-sign-in"></i> Sign In
+                                </button>
+                          </div>
+                      </form>
+                      <div style="clear: both"></div>
+                  </div>
+              </div>
+          </div>
+        </div>
+        <% } -%>
+        <%% } -%%>
         <!-- footer -->
         <p class="small text-muted text-center">
             Copyright &copy; 2014, <%=title%>.
