--- a/templates/app/views/ejs/site/index.ejs
+++ b/templates/app/views/ejs/site/index.ejs
@@ -4,12 +4,11 @@
 		<div class="row">
 			<div class="col-lg-8 col-lg-push-2 text-center">
 				<h1><%=title%></h1>
-				<h2>Show your product with this handsome theme.</h2>
+				<h2>Wrap it up in 1 one line, if you can.</h2>
 				<p class="lead">
-					Pikachu diablo 3 asians angry birds final week varius le girlfriend in.
-					Feel Like a Sir panda blizzard hac mom nerd monday in on nyan cat.
+					Here put a little teaser so people keep interested in what you have to say<br/>
+					What is that anyway? Are you building something cool? Tell here!
 				</p>
-
 				<p>
 					<%=title%> thing is currently in active development and will be released this summer.<br/>
 					In the meantime, please register to our waiting list to get notified first once something is launched.
@@ -49,8 +48,7 @@
 			<div class="col-sm-10 col-sm-push-1">
 				<h1 class="text-center">What it's all about</h1>
 				<p class="lead text-center">
-					Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-					Nam mi odio, gravida at turpis et, porta bibendum justo.
+					Now feel free to explain you product here using more lines and images like below.
 				</p>
 			</div>
 		</div>
@@ -61,12 +59,20 @@
 	<section class="container space-before space-after">
 
 		<div class="row featurelist space-after">
-			<div class="col-md-5 col-sm-6 col-md-push-1 ">
-				<img class="img-feature img-responsive" src="http://www.gettemplate.com/demo/superawesome/assets/images/screen1.png" alt="Sample image">
+			<div class="col-md-5 col-sm-6 col-md-push-1 col-sm-6">
+				<img class="img-feature img-responsive" src="http://www.gettemplate.com/demo/superawesome/assets/images/screen3.png" alt="Sample image">
 			</div>
 			<div class="col-md-5 col-md-push-1 col-sm-6">
-				<h2 class="space-before">The template is quite small, <span class="text-muted">so html code is simple</span></h2>
-				<p>What you have to ask yourself is, do I feel lucky. well do ya' punk? Ever notice how sometimes you come across somebody you shouldn't have f**ked with? Well, I'm that guy. Dyin' ain't much of a livin', boy.</p>
+				<h2 class="space-before">Theme Violet does look good too!</h2>
+				<p>
+					What you have to ask yourself is "do I feel lucky". Well, do ya' punk? Ever notice how sometimes
+					you come across somebody you shouldn't have f**ked with? Well, I'm that guy. Dyin' ain't much of a livin', boy.
+				</p>
+				<p>
+					Here. Put that in your report! And "I may have found a way out of here. you want a guarantee, buy a toaster.
+					are you feeling lucky punk dyin' ain't much of a livin', boy. what you have to ask yourself is, Do I feel lucky.
+					Well do ya' punk? You see, in this world there's two kinds of people, my friend: those with loaded guns and those who dig. you dig.
+				</p>
 			</div>
 		</div>
 
@@ -76,21 +82,15 @@
 			</div>
 			<div class="col-md-5 col-sm-6 col-md-pull-4 col-sm-pull-6">
 				<h2 class="space-before">Yes, I love cool backgrounds, <span class="text-muted">like the one used here</span></h2>
-				<p>There are 2 more color themes inside this template. You'll just need to uncomment
-					few lines in the CSS file to activate any of them. </p>
+				<p>
+					There are 2 more color themes inside this template. You'll just need to uncomment
+					few lines in the CSS file to activate any of them.
+				</p>
 				<p>Now, continue with our lipsum :)
 					This is the ak-47 assault rifle, The preferred weapon of your enemy; and it makes a distinctive sound when
-					fired at you, so remember it. When a naked man's chasing a woman through an alley with a butcher knife and a hard-on, I figure he's not out collecting for the red cross. well, do you have anything to say for yourself? </p>
-			</div>
-		</div>
+					fired at you, so remember it. When a naked man's chasing a woman through an alley with a butcher knife and a hard-on, I figure he's not out collecting for the red cross. well, do you have anything to say for yourself?
+				</p>
 
-		<div class="row featurelist space-after">
-			<div class="col-md-5 col-sm-6 col-md-push-1 col-sm-6">
-				<img class="img-feature img-responsive" src="http://www.gettemplate.com/demo/superawesome/assets/images/screen3.png" alt="Sample image">
-			</div>
-			<div class="col-md-5 col-md-push-1 col-sm-6">
-				<h2 class="space-before">Violet does look good too!</span></h2>
-				<p>Here. Put that in your report! And "I may have found a way out of here. you want a guarantee, buy a toaster. are you feeling lucky punk dyin' ain't much of a livin', boy. what you have to ask yourself is, Do I feel lucky. Well do ya' punk? You see, in this world there's two kinds of people, my friend: those with loaded guns and those who dig. you dig.</p>
 			</div>
 		</div>
 	</section>
@@ -101,7 +101,7 @@
 		<div class="row">
 			<div class="col-md-5 col-md-push-1">
 				<h2>Need help?</h2>
-				<p>First of all, thanks for using <a href="#" target="_blank"><%=title%></a>! I'm glad it could of your use.</p>
+				<p>First of all, thanks for using <a href="https://github.com/gusnips/node-koa-mvc/" target="_blank">koa-mvc</a>! I'm glad it could be of your use.</p>
 				<p>
 					If you'd like to report a bug or suggest an improvement, post an issue on <a href="https://github.com/gusnips/node-koa-mvc/issues">GitHub</a>
 				</p>
@@ -112,14 +112,14 @@
 				<form role="form" action="/contact" method="post">
 				  	<div class="input-group">
 				  		<span class="input-group-addon"><i class="fa fa-comments"></i></span>
-				    	<input type="name" id="name" name="name" class="form-control" placeholder="Your name">
+				    	<input type="name" id="name" name="name" class="form-control" placeholder="Your name" required>
 				  	</div>
 				  	<div class="input-group">
 				    	<span class="input-group-addon"><i class="fa fa-at-sign"></i></span>
-				    	<input type="email" id="email" name="mail" class="form-control" placeholder="Your email">
+				    	<input type="email" id="email" name="mail" class="form-control" placeholder="Your email" required>
 				  	</div>
 				  	<div class="form-group">
-		  				<textarea class="form-control" id="message" name="message" placeholder="Enter your message" rows="3"></textarea>
+		  				<textarea class="form-control" id="message" name="message" placeholder="Enter your message" rows="3" required></textarea>
 				  	</div>
 				  	<button type="submit" class="btn btn-large btn-success">Submit!</button>
 				</form>
