--- a/templates/app/views/ejs/site/login.ejs
+++ b/templates/app/views/ejs/site/login.ejs
@@ -2,7 +2,7 @@
     <div id="realContent" class="col-xs-12">
         <div class="row">
             <div class="col-lg-10 col-lg-offset-1 col-md-10 col-md-offset-1 col-xs-12 col-sm-offset-0">
-              <h1>Jois us!</h1>
+              <h1>Join us!</h1>
             </div>
         </div>
         <div class="row">
