Fix less support

--- a/templates/app/package.ejs
+++ b/templates/app/package.ejs
@@ -48,7 +48,7 @@
 <% } -%>
         "waterline": "0.10.*",
         "sails-<%=program.db%>": "0.10.*",
-        "bcrypt": "rvagg/node.bcrypt.js#v0.7.7"
+        "bcrypt": "rvagg/node.bcrypt.js#nan"
     },
     "devDependencies": {
         "debug": "1.x.x"
